--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,6 +43,13 @@
       </item>
       <item row="0" column="0">
        <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QPushButton" name="pb_ZoomIn">
+          <property name="text">
+           <string>+</string>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="1">
          <widget class="QPushButton" name="pb_ZoomOut">
           <property name="text">
@@ -50,10 +57,10 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QPushButton" name="pb_ZoomIn">
+        <item row="0" column="2">
+         <widget class="QPushButton" name="pb_ResetRange">
           <property name="text">
-           <string>+</string>
+           <string>Reset range</string>
           </property>
          </widget>
         </item>
