--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -65,22 +65,10 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="QPushButton" name="pb_ZoomIn">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>27</height>
-           </size>
-          </property>
+        <item row="0" column="3">
+         <widget class="QPushButton" name="pb_startServer">
           <property name="text">
-           <string>+</string>
+           <string>Start</string>
           </property>
          </widget>
         </item>
@@ -100,6 +88,32 @@
           </property>
           <property name="text">
            <string>-</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="pb_ZoomIn">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>27</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>+</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="4">
+         <widget class="QPushButton" name="pb_stopServer">
+          <property name="text">
+           <string>Stop</string>
           </property>
          </widget>
         </item>
