--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>737</width>
-    <height>498</height>
+    <height>521</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,7 +26,7 @@
     <property name="currentIndex">
      <number>0</number>
     </property>
-    <widget class="QWidget" name="tab">
+    <widget class="QWidget" name="chart">
      <attribute name="title">
       <string>Chart</string>
      </attribute>
@@ -120,11 +120,6 @@
        </layout>
       </item>
      </layout>
-    </widget>
-    <widget class="QWidget" name="tab_2">
-     <attribute name="title">
-      <string>Tab2</string>
-     </attribute>
     </widget>
    </widget>
   </widget>
