--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,6 +39,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="5" column="1">
