--- a/settings.ui
+++ b/settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>418</width>
-    <height>148</height>
+    <width>500</width>
+    <height>250</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>418</width>
-    <height>148</height>
+    <width>500</width>
+    <height>250</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -30,9 +30,15 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>401</width>
-     <height>131</height>
+     <width>481</width>
+     <height>231</height>
     </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>500</width>
+     <height>250</height>
+    </size>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="0">
