--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>737</width>
-    <height>521</height>
+    <height>541</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -146,6 +146,7 @@
    </widget>
    <addaction name="menuMenu"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
