--- a/dialog.ui
+++ b/dialog.ui
@@ -75,11 +75,17 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="mouseTracking">
             <bool>false</bool>
            </property>
            <property name="text">
-            <string>Add</string>
+            <string>    Add    </string>
            </property>
            <property name="default">
             <bool>false</bool>
@@ -98,7 +104,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Delete</string>
+            <string>  Delete  </string>
            </property>
           </widget>
          </item>
@@ -148,7 +154,7 @@
             </size>
            </property>
            <property name="text">
-            <string>Close</string>
+            <string>   Close  </string>
            </property>
           </widget>
          </item>
