--- a/settings.ui
+++ b/settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>261</width>
-    <height>220</height>
+    <width>281</width>
+    <height>341</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,8 +24,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>261</width>
-    <height>220</height>
+    <width>700</width>
+    <height>700</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -36,19 +36,43 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>261</width>
-     <height>221</height>
+     <width>281</width>
+     <height>341</height>
     </rect>
    </property>
    <property name="maximumSize">
     <size>
-     <width>500</width>
-     <height>250</height>
+     <width>700</width>
+     <height>700</height>
     </size>
    </property>
    <layout class="QGridLayout" name="gridLayout">
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_yUpperBound">
+      <property name="text">
+       <string>Enter Y upper bound:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLineEdit" name="le_xUpperBound">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_xUpperBound">
+      <property name="text">
+       <string>Enter X upper bound:</string>
+      </property>
+     </widget>
+    </item>
     <item row="1" column="0">
-     <widget class="QLineEdit" name="le_value">
+     <widget class="QLineEdit" name="le_thresholdValue">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -58,7 +82,7 @@
      </widget>
     </item>
     <item row="0" column="0">
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="label_threshold">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
         <horstretch>0</horstretch>
@@ -70,10 +94,13 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
+    <item row="7" column="0">
      <widget class="QWidget" name="widget" native="true">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -109,6 +136,16 @@
         </widget>
        </item>
       </layout>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLineEdit" name="le_yUpperBound">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
      </widget>
     </item>
    </layout>
