--- a/StyleSheet.qrc
+++ b/StyleSheet.qrc
@@ -1,10 +1,8 @@
 <RCC>
   <qresource prefix="qss_icons">
-      <file>rc/down_arrow.png</file>
-      <file>rc/down_arrow_disabled.png</file>
       <file>rc/combobox_open.png</file>
   </qresource>
-  <qresource prefix="qdarkstyle">
+  <qresource prefix="qstyle">
       <file>StyleSheet.qss</file>
   </qresource>
 </RCC>
