--- a/dialog.ui
+++ b/dialog.ui
@@ -85,7 +85,7 @@
             <bool>false</bool>
            </property>
            <property name="text">
-            <string>    Add    </string>
+            <string>Добавить</string>
            </property>
            <property name="default">
             <bool>false</bool>
@@ -104,7 +104,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>  Delete  </string>
+            <string>Удалить</string>
            </property>
           </widget>
          </item>
@@ -129,7 +129,7 @@
             </size>
            </property>
            <property name="text">
-            <string>Connect</string>
+            <string>Подключиться</string>
            </property>
           </widget>
          </item>
@@ -154,7 +154,7 @@
             </size>
            </property>
            <property name="text">
-            <string>   Close  </string>
+            <string>Закрыть</string>
            </property>
           </widget>
          </item>
