--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,7 +34,7 @@
     </property>
     <widget class="QWidget" name="chart">
      <attribute name="title">
-      <string>Chart</string>
+      <string>График</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout">
       <item row="1" column="0" colspan="3">
@@ -93,7 +93,7 @@
             </size>
            </property>
            <property name="text">
-            <string>Reset</string>
+            <string>Сбросить</string>
            </property>
           </widget>
          </item>
@@ -106,7 +106,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Start</string>
+            <string>Старт</string>
            </property>
           </widget>
          </item>
@@ -157,7 +157,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Stop</string>
+            <string>Стоп</string>
            </property>
           </widget>
          </item>
@@ -192,7 +192,7 @@
    </property>
    <widget class="QMenu" name="menuMenu">
     <property name="title">
-     <string>Menu</string>
+     <string>Меню</string>
     </property>
     <addaction name="actionConnect_to"/>
     <addaction name="actionSettings"/>
@@ -204,7 +204,7 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionExit">
    <property name="text">
-    <string>Exit</string>
+    <string>Выход</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Q</string>
@@ -212,12 +212,12 @@
   </action>
   <action name="actionSettings">
    <property name="text">
-    <string>Settings</string>
+    <string>Настройки</string>
    </property>
   </action>
   <action name="actionConnect_to">
    <property name="text">
-    <string>Connect to...</string>
+    <string>Подключиться к...</string>
    </property>
   </action>
  </widget>
